fix margin collapse for h3
Both h2 and h3 have a margin-top set, but this rule for removing/collapsing
the margin was only defined for h2. I'm assuming this was just forgotten.

--- a/simple.css
+++ b/simple.css
@@ -341,7 +341,9 @@ article, fieldset, dialog {
 }
 
 article h2:first-child,
-section h2:first-child {
+section h2:first-child,
+article h3:first-child,
+section h3:first-child {
   margin-top: 1rem;
 }
 
